--- a/.github/workflows/weekly-deep-dive.yml
+++ b/.github/workflows/weekly-deep-dive.yml
@@ -2,8 +2,8 @@ name: Weekly Deep Dive
 
 on:
   schedule:
-    # 北京时间 周一 09:30（UTC 01:30）运行
-    - cron: "30 1 * * 1"
+    # 北京时间 周五 20:00（UTC 12:00）运行
+    - cron: "0 12 * * 5"
   workflow_dispatch:
 
 concurrency:
