--- a/.github/workflows/paper-zone.yml
+++ b/.github/workflows/paper-zone.yml
@@ -74,9 +74,10 @@ jobs:
           # AI 配置
           AI_API_KEY: ${{ secrets.AI_API_KEY || secrets.GEMINI_API_KEY }}
           AI_API_BASE: ${{ secrets.AI_API_BASE || secrets.GEMINI_BASE_URL }}
-          AI_MODEL: ${{ secrets.AI_MODEL || secrets.GEMINI_MODEL || 'gemini-3-flash-preview' }}
+          # 强制走 OpenAI 兼容协议（避免 LiteLLM 误走 Vertex 导致缺依赖）
+          AI_MODEL: ${{ secrets.AI_MODEL || secrets.GEMINI_MODEL || 'openai/gemini-3-flash-preview' }}
           PAPER_ZONE_ENABLED: "true"
-          PAPER_ZONE_MODEL: "gemini-3-pro-preview"
+          PAPER_ZONE_MODEL: "openai/gemini-3-pro-preview"
 
           # 远程存储配置
           S3_BUCKET_NAME: ${{ secrets.S3_BUCKET_NAME }}
